# trap-spaces-as-siphons

./: .dockerignore  .gitignore  41467_2019_8903_MOESM5_ESM.txt  Benchmark.ipynb  Demonstration.ipynb  Dockerfile  MANIFEST.in  README.md  TCS-Benchmark-BBM.ipynb  TCS-Benchmark-PBN.ipynb  TCS-Benchmark-Selected.ipynb  [CMSB 2022, Paper 13] Reply letter.docx  bench.sh  cmsb22.bib  cmsb22.tex  mapk.pnml  models.tgz  pyproject.toml  result.txt  setup.cfg  setup.py  trappist.py
.ipynb_checkpoints/: Benchmark-checkpoint.ipynb  Demonstration-checkpoint.ipynb
TCS-data-set/BBM/: [id-001]__[var-302]__[in-19]__[SIGNALING-IN-MACROPHAGE-ACTIVATION].bnet  [id-002]__[var-130]__[in-9]__[SIGNAL-TRANSDUCTION-IN-FIBROBLASTS].bnet  [id-003]__[var-19]__[in-1]__[MAMMALIAN-CELL-CYCLE].bnet  [id-004]__[var-225]__[in-22]__[ERBB-RECEPTOR-SIGNALING].bnet  [id-005]__[var-28]__[in-0]__[FA-BRCA-PATHWAY].bnet  [id-006]__[var-62]__[in-6]__[HGF-SIGNALING-IN-KERATINOCYTES].bnet  [id-007]__[var-5]__[in-0]__[CORTICAL-AREA-DEVELOPMENT].bnet  [id-008]__[var-25]__[in-3]__[DEATH-RECEPTOR-SIGNALING].bnet  [id-009]__[var-60]__[in-13]__[YEAST-APOPTOSIS].bnet  [id-010]__[var-13]__[in-2]__[CARDIAC-DEVELOPMENT].bnet  [id-011]__[var-40]__[in-4]__[GUARD-CELL-ABSCISIC-ACID-SIGNALING].bnet  [id-012]__[var-94]__[in-7]__[T-CELL-RECEPTOR-SIGNALING].bnet  [id-014]__[var-54]__[in-7]__[T-LGL-SURVIVAL-NETWORK-2008].bnet  (+198 more)
conda/: meta.yaml
hard_models/: 146_BUDDING-YEAST-FAURE-2009.bnet  Cell_cycle_control_network.bnet  Human_network.bnet  Insulin_example.bnet  S1_Table.bnet  S2_Table.bnet  SN5.bnet  SN6.bnet  YeastPheromoneModel.bnet  turei_2016.bnet
models/: CASCADE3.bnet  Colitis_associated_colon_cancer.bnet  Corral_ThIL17diff_15jan2021.bnet  ER-STRESS.bnet  ERBB-RECEPTOR-SIGNALING.bnet  Executable_file_for_Alzheimer_model.bnet  Executable_file_for_Alzheimer_model_BCC.bnet  Executable_file_for_CaSQ_derived_MAPK_model.bnet  Executable_file_for_CaSQ_derived_MAPK_model_BCC.bnet  Executable_file_for_CaSQ_derived_mast_cell_activation_model.bnet  Executable_file_for_cholocystokinin_model.bnet  Executable_file_for_cholocystokinin_model_BCC.bnet  FIBROBLASTS.bnet  HIV-1.bnet  HMOX1-PATHWAY.bnet  Hernandez_TcellCheckPoints_13april2020.bnet  Human_network.bnet  IL_6_Signalling.bnet  IMMUNE-SYSTEM.bnet  INTERFERON-1.bnet  InflammatoryBowelDisease.bnet  Influenza_A_Virus_Replication_Cycle.bnet  KYNURENINE-PATHWAY.bnet  Kynurenine_pathway_stable.bnet  RA_apoptosis_executable_module.bnet  RA_apoptosis_executable_module_BCC.bnet  Regan2020_Adhesion_CIP_Migration_CellCycle_Apoptosis.bnet  S1_Table.bnet  SIGNALING-IN-PROSTATE-CANCER.bnet  SIGNALING-PATHWAY-FOR-BUTANOL-PRODUCTION.bnet  SN5.bnet  Signaling_in_Macrophage_Activation.bnet  TCR-TLR5-SIGNALING-2018.bnet  TLGLSurvival.bnet  VIRUS-REPLICATION-CYCLE.bnet  cho_2016_all_pos.bnet  korkut_2015a.bnet  turei_2016.bnet
random/: 100-i3-1.bnet  100-i3-10.bnet  100-i3-11.bnet  100-i3-12.bnet  100-i3-13.bnet  100-i3-14.bnet  100-i3-15.bnet  100-i3-16.bnet  100-i3-17.bnet  100-i3-18.bnet  100-i3-19.bnet  100-i3-2.bnet  100-i3-20.bnet  100-i3-21.bnet  100-i3-22.bnet  100-i3-23.bnet  100-i3-24.bnet  100-i3-25.bnet  100-i3-26.bnet  100-i3-27.bnet  100-i3-28.bnet  100-i3-29.bnet  100-i3-3.bnet  100-i3-30.bnet  100-i3-31.bnet  100-i3-32.bnet  100-i3-33.bnet  100-i3-34.bnet  100-i3-35.bnet  100-i3-36.bnet  100-i3-37.bnet  100-i3-38.bnet  100-i3-39.bnet  100-i3-4.bnet  100-i3-40.bnet  100-i3-41.bnet  100-i3-42.bnet  100-i3-43.bnet  100-i3-44.bnet  100-i3-45.bnet  (+360 more)
sbml/: Colitis_associated_colon_cancer.bnet  Colitis_associated_colon_cancer.sbml  ERBB-RECEPTOR-SIGNALING.sbml  Executable_file_for_Alzheimer_model_BCC.sbml  Executable_file_for_CaSQ_derived_MAPK_model_BCC.sbml  Executable_file_for_CaSQ_derived_mast_cell_activation_model_BCC.sbml  Executable_file_for_cholocystokinin_model_BCC.sbml  FIBROBLASTS.bnet  FIBROBLASTS.sbml  HIV-1.bnet  HIV-1.sbml  HMOX1-PATHWAY.bnet  Hernandez_TcellCheckPoints_13april2020.bnet  Hernandez_TcellCheckPoints_13april2020.sbml  IL_6_Signalling.bnet  IL_6_Signalling.sbml  INTERFERON-1.bnet  Influenza_A_Virus_Replication_Cycle.sbml  RA_apoptosis_executable_module_BCC.sbml  README.md  README.txt  SIGNALING-PATHWAY-FOR-BUTANOL-PRODUCTION.bnet  SIGNALING-PATHWAY-FOR-BUTANOL-PRODUCTION.sbml  Signaling_in_Macrophage_Activation.bnet  Signaling_in_Macrophage_Activation.sbml  TLGLSurvival.bnet  TLGLSurvival.sbml  VIRUS-REPLICATION-CYCLE.bnet
trappist/: __init__.py  bnet.py  conj.py  cp.py  ilp.py  max_sat.py  naive.py  trappist.py
(+765 files in other folders)
