[build-system]
requires = [
    "hatchling>=1.5.0",
]
build-backend = "hatchling.build"

[project]
name = "trappist"
description = "Minimal Trap Spaces computation using Maximal Siphons"
authors = [
   { name = "Sylvain Soliman", email = "Sylvain.Soliman@inria.fr" },
]
license = "GPL-3.0"
classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
   "Operating System :: OS Independent",
]
dynamic = [
   "version"
]
requires-python = ">=3.6"
dependencies = [
    "loguru>=0.2.5",
    "python-sat",
    "networkx>=2.2",
    "minizinc>=0.6",
    "pyeda>=0.28",
]
readme = "README.md"
license-files = { paths = ["LICENSE"] }

[project.urls]
Code = "https://github.com/soli/trap-spaces-as-siphons"

[project.optional-dependencies]
dev = [
    "ruff>=0.0.289",
]

[project.scripts]
trappist = "trappist.trappist:main"

[tool.hatch.version]
path = "trappist/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/trappist",
    "/conda",
]
exclude = [
    "/trappist/.mypy_cache/**",
    "/trappist/__token__",
]

[tool.hatch.envs.default]
python = "39"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff>=0.0.289",
]
python = "39"

[tool.hatch.envs.lint.scripts]
check = [
    "ruff format --diff trappist",
    "ruff check trappist",
]
fmt = [
    "ruff format trappist",
    "ruff check --fix trappist",
]


[tool.ruff]
select = ["C", "E", "F", "W", "D", "A", "I", "B"]
ignore = ["D203", "D212", "D213", "E501", "D206", "W191", "C901"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
