[metadata]
name = trappist
description = Minimal Trap Spaces computation using Maximal Siphons
version = attr:trappist.version
long_description= file: README.md
long_description_content_type = text/markdown
author = Sylvain Soliman
author_email = Sylvain.Soliman@inria.fr
url = https://github.com/soli/trap-spaces-as-siphons
project_urls =
   Code = https://github.com/soli/trap-spaces-as-siphons
license = GPLv3
classifiers =
   Development Status :: 4 - Beta
   Programming Language :: Python :: 3
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
   networkx>=2.2
   python-sat>=0.1
python_requires = >=3.5

[options.extras_require]
dev =
   black
   check-manifest
   flake8-mypy

[options.entry_points]
console_scripts =
   trappist = trappist.trappist:main

[check-manifest]
ignore =
   .gitlab-ci.yml
   .readthedocs.yml

[flake8]
max-line-length = 80
ignore = E501,W503
select = C,E,F,W,D,A,I,B,B950
